--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
     "web-vitals": "^2.1.4"
   },
