--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.1.2",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "eslint": "8.22.0",
